# z-rocket-test

./: .env  .neoconf.json  Cargo.toml  Containerfile  README.md  Rocket.toml  benchmark.yml  build.sh  compose.yaml  rest.http
src/: main.rs  test.rs
src/app/: mod.rs  server.rs
src/app/modules/: mod.rs  routing.rs
src/app/modules/cron/: controller.rs  model.rs  repository.rs
src/app/modules/escalon/: model.rs  repository.rs
src/app/providers/: config_getter.rs  constants.rs  cors.rs  mod.rs
src/app/providers/guards/: claims.rs
src/app/providers/models/: answer.rs  cronjob.rs  message.rs  mod.rs  paper.rs  project.rs  record.rs  resource.rs  slide.rs  user.rs
src/app/providers/services/: claims.rs  cron.rs  fetch.rs  mod.rs  token.rs
src/database/: connection.rs  schema.rs
src/database/migrations/2023-09-20-073318_create_table/: down.sql  up.sql
src/database/migrations/2023-09-20-073624_create_escalon/: down.sql  up.sql
